[tool.poetry]
name = "hyperon-das"
version = "0.7.12"
description = "Query Engine API for Distributed AtomSpace"
authors = ["marcocapozzoli <marcocapozzoli90@gmail.com>"]
readme = "README.md"
packages = [
    {include = "hyperon_das"},
]

[tool.poetry.urls]
"Documentation" = "https://singnet.github.io/das-query-engine"
"Code" = "https://github.com/singnet/das-query-engine"
"Bug Tracker" = "https://github.com/singnet/das-query-engine/issues"
"Releases" = "https://github.com/singnet/das-query-engine/releases"

[tool.poetry.dependencies]
python = "^3.8.5"
hyperon-das-atomdb = "0.6.12"
requests = "^2.31.0"
grpcio = "^1.62.2"
google = "^3.0.0"
protobuf = "^4.25.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.9.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.5.0"
poetry-plugin-export = "^1.6.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.13"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.8.0"

[tool.isort]
py_version = 38
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true

[tool.flake8]
show-source = true
extend-ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
